--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<%= image_tag "core.png", id: "core", alt: "Animated space core from the game portal" %>
 <%= yield %>
 
 </body>
