alias button value: lengthen

--- a/app/views/aliases/new.html.erb
+++ b/app/views/aliases/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= form_for @alias, remote: true do |f| %>
   <%= f.text_field :original_url %>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", value: "Lengthen" %>
 <% end %>
